--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,24 @@
+atomicwrites==1.2.1
+attrs==18.2.0
+bcrypt==3.1.4
+cffi==1.11.5
 click==6.7
 Flask==1.0.2
+Flask-Bcrypt==0.7.1
+Flask-JWT-Extended==3.12.1
+funcsigs==1.0.2
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
+more-itertools==4.3.0
+pathlib2==2.3.2
+pluggy==0.7.1
 psycopg2==2.7.5
 psycopg2-binary==2.7.5
+py==1.6.0
+pycparser==2.18
+PyJWT==1.6.4
+pytest==3.8.0
+scandir==1.9.0
+six==1.11.0
 Werkzeug==0.14.1
