--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ attrs==18.2.0
 bcrypt==3.1.4
 cffi==1.11.5
 click==6.7
+coverage==4.5.1
 Flask==1.0.2
 Flask-Bcrypt==0.7.1
 Flask-JWT-Extended==3.12.1
@@ -19,6 +20,7 @@ py==1.6.0
 pycparser==2.18
 PyJWT==1.6.4
 pytest==3.8.0
+pytest-cov==2.6.0
 scandir==1.9.0
 six==1.11.0
 Werkzeug==0.14.1
