--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,31 @@ pytest-cov==2.6.0
 scandir==1.9.0
 six==1.11.0
 Werkzeug==0.14.1
+asn1crypto==0.24.0
+certifi==2018.8.24
+chardet==3.0.4
+configparser==3.5.0
+coverage==4.5.1
+coveralls==1.5.0
+cryptography==2.3.1
+docopt==0.6.2
+enum34==1.1.6
+flasgger==0.9.0
+functools32==3.2.3.post2
+idna==2.7
+ipaddress==1.0.22
+jsonschema==2.6.0
+mistune==0.8.3
+more-itertools==4.3.0
+pathlib2==2.3.2
+pluggy==0.7.1
+psycopg2==2.7.5
+psycopg2-binary==2.7.5
+py==1.6.0
+pycparser==2.18
+PyJWT==1.6.4
+pyOpenSSL==18.0.0
+PyYAML==3.13
+requests==2.19.1
+scandir==1.9.0
+urllib3==1.23
