--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,11 @@
+asn1crypto==0.24.0
 atomicwrites==1.2.1
 attrs==18.2.0
 bcrypt==3.1.4
-cffi==1.11.5
-click==6.7
-coverage==4.5.1
-Flask==1.0.2
-Flask-Bcrypt==0.7.1
-Flask-JWT-Extended==3.12.1
-funcsigs==1.0.2
-itsdangerous==0.24
-Jinja2==2.10
-MarkupSafe==1.0
-more-itertools==4.3.0
-pathlib2==2.3.2
-pluggy==0.7.1
-psycopg2==2.7.5
-psycopg2-binary==2.7.5
-py==1.6.0
-pycparser==2.18
-PyJWT==1.6.4
-pytest==3.8.0
-pytest-cov==2.6.0
-scandir==1.9.0
-six==1.11.0
-Werkzeug==0.14.1
-asn1crypto==0.24.0
 certifi==2018.8.24
+cffi==1.11.5
 chardet==3.0.4
+click==6.7
 configparser==3.5.0
 coverage==4.5.1
 coveralls==1.5.0
@@ -34,9 +13,17 @@ cryptography==2.3.1
 docopt==0.6.2
 enum34==1.1.6
 flasgger==0.9.0
+Flask==1.0.2
+Flask-Bcrypt==0.7.1
+Flask-JWT-Extended==3.12.1
+funcsigs==1.0.2
+functools32==3.2.3.post2
 idna==2.7
 ipaddress==1.0.22
+itsdangerous==0.24
+Jinja2==2.10
 jsonschema==2.6.0
+MarkupSafe==1.0
 mistune==0.8.3
 more-itertools==4.3.0
 pathlib2==2.3.2
@@ -44,10 +31,15 @@ pluggy==0.7.1
 psycopg2==2.7.5
 psycopg2-binary==2.7.5
 py==1.6.0
+pycodestyle==2.4.0
 pycparser==2.18
 PyJWT==1.6.4
 pyOpenSSL==18.0.0
+pytest==3.8.0
+pytest-cov==2.6.0
 PyYAML==3.13
 requests==2.19.1
 scandir==1.9.0
+six==1.11.0
 urllib3==1.23
+Werkzeug==0.14.1
