--- a/.pylintrc
+++ b/.pylintrc
@@ -38,8 +38,7 @@ load-plugins=
 # --enable=similarities". If you want to run only the classes checker, but have
 # no Warning level messages displayed, use"--disable=all --enable=classes
 # --disable=W"
-disable=F0401,W0141,W0611,W0110,W0703,W0142,C0121,W0622,W0231,W0613,C1801,C0103,R0903,W0201
-
+disable=F0401,W0141,W0611,W0110,W0703,W0142,C0121,W0622,W0231,W0613,C1801,C0103,R0903,W0201,C0301,R0201,C0413,R0913,W0105,R1710, R0911,R1702,R1705,W0702,W0311,R1703,C0303,R0205,R0914
 
 [REPORTS]
 
