--- a/requirements.txt
+++ b/requirements.txt
@@ -39,8 +39,8 @@ PyJWT==1.6.4
 pyOpenSSL==18.0.0
 pytest==3.8.0
 pytest-cov==2.6.0
-PyYAML==3.13
-requests==2.19.1
+pyyaml>=4.2b1
+requests>=2.20.0
 scandir==1.9.0
 six==1.11.0
 urllib3==1.23
